--- a/src/block/src/components/ProviderUserForm.module.scss
+++ b/src/block/src/components/ProviderUserForm.module.scss
@@ -24,10 +24,10 @@
   input[type="password"] {
 	font-size: 24px;
 	line-height: 1.33333333;
-	width: 100%;
+	width: calc(100% - .1625rem);
 	border-width: .0625rem;
-	padding: .1875rem .3125rem;
-	margin: 0 6px 16px 0;
+	padding: 0;
+	margin: 0;
 	min-height: 40px;
 	max-height: none;
   }
